REFACTOR(our-legacy page global components)<--Is divided into small components-->

--- a/store/blocks/global/components/our-legacy/our-legacy-slider-objectives.jsonc
+++ b/store/blocks/global/components/our-legacy/our-legacy-slider-objectives.jsonc
@@ -1,11 +1,32 @@
 {
-  "flex-layout.row#our-legacy__objectives": {
-    "children": ["slider-layout#our-legacy__objectives"],
+  "flex-layout.row#global__our-legacy--title-objectives": {
+    "title": "container objectives",
+    "children": ["flex-layout.col#global__our-legacy--title-objectives"],
     "props": {
-      "blockClass": "our-legacy__objectives"
+      "blockClass": ["our-artisans__section", "our-artisans__objectives"]
     }
   },
-  "slider-layout#our-legacy__objectives": {
+  "flex-layout.col#global__our-legacy--title-objectives": {
+    "title": "container title and slider",
+    "children": [
+      "rich-text#global__title-objectives",
+      "slider-layout#global__our-legacy--objectives"
+    ],
+    "props": {
+      "blockClass": "our-legacy__subcontainers"
+    }
+  },
+  "rich-text#global__title-objectives": {
+    "title": "title",
+    "props": {
+      "text": "##### OBJETIVOS DE \n ##### **DESARROLLO SOSTENIBLE**",
+      "textAlignment": "CENTER",
+      "textPosition": "CENTER",
+      "blockClass": "our-artisans__text"
+    }
+  },
+  "slider-layout#global__our-legacy--objectives": {
+    "title": "slider objectives",
     "props": {
       "infinite": true,
       "showPaginationDots": false,
@@ -16,7 +37,8 @@
       },
       "itemsPerPage": {
         "desktop": 2,
-        "mobile": 2
+        "tablet": 2,
+        "phone": 1
       },
       "blockClass": "our-legacy__objectives"
     },
@@ -28,15 +50,17 @@
     ]
   },
   "flex-layout.col#objective-one": {
+    "title": "conatiner item",
     "children": [
       "image#our-legacy__objective-one",
       "rich-text#objective-one__title"
     ],
     "props": {
-      "paddingRight": 5
+      "blockClass": "slider__objective-item"
     }
   },
   "image#our-legacy__objective-one": {
+    "title": "image one",
     "props": {
       "src": "/arquivos/our-legacy-three.png",
       "height": "100%",
@@ -44,6 +68,7 @@
     }
   },
   "rich-text#objective-one__title": {
+    "title": "title image",
     "props": {
       "text": "Industria, innovación e **infraestructura**",
       "textAlignment": "CENTER",
@@ -52,15 +77,17 @@
     }
   },
   "flex-layout.col#objective-two": {
+    "title": "conatiner item",
     "children": [
       "image#our-legacy__objective-two",
       "rich-text#objective-two__title"
     ],
     "props": {
-      "paddingRight": 5
+      "blockClass": "slider__objective-item"
     }
   },
   "image#our-legacy__objective-two": {
+    "title": "image two",
     "props": {
       "src": "/arquivos/our-legacy-one.jpg",
       "height": "100%",
@@ -68,6 +95,7 @@
     }
   },
   "rich-text#objective-two__title": {
+    "title": "title image",
     "props": {
       "text": "Fin de la **pobreza**",
       "textAlignment": "CENTER",
@@ -76,15 +104,17 @@
     }
   },
   "flex-layout.col#objective-three": {
+    "title": "conatiner item",
     "children": [
       "image#our-legacy__objective-three",
       "rich-text#objective-three__title"
     ],
     "props": {
-      "paddingRight": 5
+      "blockClass": "slider__objective-item"
     }
   },
   "image#our-legacy__objective-three": {
+    "title": "image three",
     "props": {
       "src": "/arquivos/our-lagacy-two.png",
       "height": "100%",
@@ -92,6 +122,7 @@
     }
   },
   "rich-text#objective-three__title": {
+    "title": "title image",
     "props": {
       "text": "Trabajo decente y **crecimiento económico**",
       "textAlignment": "CENTER",
@@ -100,15 +131,17 @@
     }
   },
   "flex-layout.col#objective-four": {
+    "title": "conatiner item",
     "children": [
       "image#our-legacy__objective-four",
       "rich-text#objective-four__title"
     ],
     "props": {
-      "paddingRight": 5
+      "blockClass": "slider__objective-item"
     }
   },
   "image#our-legacy__objective-four": {
+    "title": "image four",
     "props": {
       "src": "/arquivos/our-legacy-four.jpg",
       "height": "100%",
@@ -116,6 +149,7 @@
     }
   },
   "rich-text#objective-four__title": {
+    "title": "title image",
     "props": {
       "text": "Reducción de la **desigualdad**",
       "textAlignment": "CENTER",
