style(home banners one and personal shopper)<--Changes styles of banner navidad one and banner personal shopper, both to mobile view-->

--- a/store/blocks/mobile/components/home/home -banner-one.jsonc
+++ b/store/blocks/mobile/components/home/home -banner-one.jsonc
@@ -20,7 +20,9 @@
   "image#banner-container__image": {
     "title": "banner image",
     "props": {
-      "src": "/arquivos/banner-navidad-one-velez.png"
+      "src": "/arquivos/banner-principal-navidad-uno-mobile.png",
+      "width": 384,
+      "height": 736
     }
   },
   "flex-layout.col#banner-container__text-button": {
