--- a/store/blocks/global/components/home/home-slider-navidad.jsonc
+++ b/store/blocks/global/components/home/home-slider-navidad.jsonc
@@ -14,6 +14,7 @@
       "list-context.image-list#global__home--list-navidad"
     ],
     "props": {
+      "rowGap": 5,
       "blockClass": "global__home--subcontainer-slider-navidad"
     }
   },
@@ -39,17 +40,17 @@
       "height": "700px",
       "images": [
         {
-          "image": "/arquivos/image-1-banner-regalos-mobile.png",
+          "image": "/arquivos/image-1-banner-regalos.png",
           "mobileImage": "/arquivos/image-1-banner-regalos-mobile.png",
           "description": "image navida one"
         },
         {
-          "image": "/arquivos/image-2-banner-regalos-mobile.png",
+          "image": "/arquivos/image-2-banner-regalos.png",
           "mobileImage": "/arquivos/image-2-banner-regalos-mobile.png",
           "description": "image navida two"
         },
         {
-          "image": "/arquivos/image-3-banner-regalos-mobile.png",
+          "image": "/arquivos/image-3-banner-regalos.png",
           "mobileImage": "/arquivos/image-3-banner-regalos-mobile.png",
           "description": "image navida three"
         }
@@ -67,7 +68,15 @@
       },
       "infinite": true,
       "showPaginationDots": "never",
-      "centerMode": "center",
+      "arrowSize": {
+        "desktop": 15,
+        "mobile": 15
+      },
+      "centerMode": {
+        "desktop": "center",
+        "mobile": "disabled"
+      },
+      "centerModeSlidesGap": 58,
       "blockClass": "global__home--slider-navidad"
     }
   }
