REFACTOR(link our legacy footer)<--Adds link to footer-->

--- a/store/blocks/desktop/components/footer/footer.jsonc
+++ b/store/blocks/desktop/components/footer/footer.jsonc
@@ -96,7 +96,8 @@
           "id": "our-legacy",
           "type": "custom",
           "itemProps": {
-            "type": "external",
+            "type": "internal",
+            "href": "/our-legacy",
             "text": "Nuestro legado"
           }
         },
