--- a/store/blocks/mobile/components/footer/footer.jsonc
+++ b/store/blocks/mobile/components/footer/footer.jsonc
@@ -65,7 +65,8 @@
           "id": "our-legacy",
           "type": "custom",
           "itemProps": {
-            "type": "external",
+            "type": "internal",
+            "href": "/our-legacy",
             "text": "Nuestro legado"
           }
         },
