--- a/store/blocks/global/components/header/minicart-product-list.jsonc
+++ b/store/blocks/global/components/header/minicart-product-list.jsonc
@@ -1,6 +1,6 @@
 {
   "product-list#minicart": {
     "title": "product list minicart",
-    "blocks": ["product-list-content-desktop"]
+    "blocks": ["product-list-content-desktop","product-list-content-mobile"]
   }
 }
