--- a/manifest.json
+++ b/manifest.json
@@ -57,7 +57,8 @@
     "vtex.disclosure-layout": "1.x",
     "vtex.product-price": "1.x",
     "vtex.modal-layout": "0.x",
-    "vtex.product-specifications": "1.x"
+    "vtex.product-specifications": "1.x",
+    "vtex.overlay-layout": "0.x"
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
