feat(product detail slider product)<--Add slider product-->

--- a/store/blocks/global/screen/product.jsonc
+++ b/store/blocks/global/screen/product.jsonc
@@ -3,7 +3,8 @@
     "title": "PDP",
     "children": [
       "flex-layout.row#product__breadcrumb",
-      "flex-layout.row#product__container"
+      "flex-layout.row#product__container",
+      "flex-layout.row#global__product-detail-container--slider-product"
     ]
   },
   "store.not-found#product": {
