--- a/manifest.json
+++ b/manifest.json
@@ -58,7 +58,8 @@
     "vtex.product-price": "1.x",
     "vtex.modal-layout": "0.x",
     "vtex.product-specifications": "1.x",
-    "vtex.overlay-layout": "0.x"
+    "vtex.overlay-layout": "0.x",
+    "itgloberspartnercl.whatsapp-button": "0.x"
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
