--- a/store/blocks/desktop/screen/search/search-result-layout.desktop.jsonc
+++ b/store/blocks/desktop/screen/search/search-result-layout.desktop.jsonc
@@ -2,6 +2,7 @@
   "search-result-layout.desktop": {
     "title": "search result desktop",
     "children": [
+      "whatsapp-button#global__button",
       "flex-layout.row#global__search-result--banner-top",
       "flex-layout.row#global__search-result-container--slider-product",
       "flex-layout.row#desktop__search-result--continer"
