--- a/store/blocks/mobile/screen/home/home-responsive-layout.jsonc
+++ b/store/blocks/mobile/screen/home/home-responsive-layout.jsonc
@@ -1,6 +1,7 @@
 {
   "responsive-layout.mobile": {
     "children": [
+      "whatsapp-button#global__button",
       "flex-layout.row#mobile__banner-one",
       "flex-layout.row#mobile__banner-two",
       "flex-layout.row#global__home--container-slider-navidad",
